拓扑图侧边工具栏修改 1.点击  显示工具栏复选框可以切换工具栏的显示和隐藏 2.将侧边工具栏按钮相对应的操作，从topframe中移到一个独立的js文件中，引入showMap

--- a/WebContent/common/css/style2.css
+++ b/WebContent/common/css/style2.css
@@ -24,7 +24,8 @@
 	display: block;
 	line-height:15px;
 	width: 150px;
-	height: 32px;
+	/* 注释掉height属性，使其为auto，大小和内部内容大小一致，背景扩展 */
+	/*height: 32px;*/  
 	background:#ececec;
 	border:1px solid gray;
 	-moz-border-radius:5px 0px 0px 5px;
